fix Conflict of showing Products